samples/_failures_safe/1761154203_9c7566_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cd5be44.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_8cd5be44.c:158:9: error: expected expression at end of input
  158 |         if (tokens[i].type >= 0 &&
      |         ^~
./samples/SAFE/__tmp_8cd5be44.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8cd5be44.c:158:9: error: expected declaration or statement at end of input
